# generative-ai-workflow

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
examples/: README.md  complete_workflow_example.py
specs/001-framework-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-framework-foundation/checklists/: requirements.md
specs/001-framework-foundation/contracts/: interfaces.py
specs/001-prometheus-middleware/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-prometheus-middleware/checklists/: requirements.md
specs/001-prometheus-middleware/contracts/: prometheus-middleware-api.md
specs/001-stable-diffusion-node/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-workflow-control-flow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-rename-step-node/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-rename-step-node/checklists/: requirements.md
specs/004-remove-dead-fields/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/generative_ai_workflow/: __init__.py  config.py  control_flow.py  engine.py  exceptions.py  node.py  sd_model_registry.py  step.py  workflow.py
tests/: conftest.py
tests/integration/: test_control_flow_integration.py  test_full_workflow.py  test_performance.py  test_prometheus_integration.py  test_provider_retry.py
tests/unit/: test_config.py  test_control_flow.py  test_engine.py  test_expression_evaluator.py  test_import_removal.py  test_node.py  test_stable_diffusion_node.py  test_workflow.py
(+26 files in other folders)
