[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "generative-ai-workflow"
version = "0.1.0"
description = "A generic AI workflow framework for building and executing multi-step LLM workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "llm", "workflow", "openai", "automation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "tenacity>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "vcrpy>=6.0",
    "ruff>=0.3",
    "black>=24.0",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/generative_ai_workflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (may require API keys)",
    "cost_budget: marks tests with cost budget enforcement",
    "performance: marks tests measuring framework overhead",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
